--- a/css/main.css
+++ b/css/main.css
@@ -526,7 +526,7 @@ tablet
 	.testimonials img {
 		float: left;
 		margin-right: 1em;
-		margin-bottom: 5.5em;
+		margin-bottom: 7em;
 	}
 }
 
@@ -637,6 +637,8 @@ desktop
 	.testimonials div {
 		width: 50%;
 		float: left;
+		padding-left: 2em;
+		padding-right: 2em;
 	}
 
 
