fix spacing for margin

--- a/css/main.css
+++ b/css/main.css
@@ -618,7 +618,7 @@ desktop
 		display:inline-block;
 		height:16em;
 		width:13.5em;
-		margin: 0 .6em;
+		margin: 0.6em;
 	}
 
 	.adventure-grp img {
