--- a/css/main.css
+++ b/css/main.css
@@ -160,6 +160,11 @@ li > .fa-chevron-down {
 	line-height: 3.5em;
 }
 
+.bottom-nav .navigation a {
+	color: #fff;
+	font-size: 1.3em;
+}
+
 header {
 		background-color: #383838;
 		width: 100%;
