add color to address and email for bottom nav on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -330,8 +330,14 @@ header div.lg-container > div h1 {
 		margin-bottom: 0;
 	}
 
-	.news-container p {
+	.news-container p,
+	address p,
+	address a {
 		color: rgba(181,196,213,0.9);
+		font-style: normal;
+	}
+
+	.news-container p {
 		margin-bottom: 2em;
 	}
 
