--- a/css/main.css
+++ b/css/main.css
@@ -249,10 +249,6 @@ header div.lg-container > div h1 {
 		padding: 0 2em;
 	}
 
-	#googleMap {
-		width: auto;
-		height:380px;
-	}
 
 	/* adventures */
 
@@ -399,15 +395,13 @@ header div.lg-container > div h1 {
 
 	.bottom-nav > p {
 		padding: 5em 3em;
+		margin-bottom: 0;
 	}
 
-	
-
-
-
-	
-
-
+	#googleMap {
+		width: auto;
+		height: 31vh;
+	}
 
 
 
